editor overflow issue fixed

--- a/components/NewPostModal/new_post_modal.module.scss
+++ b/components/NewPostModal/new_post_modal.module.scss
@@ -61,5 +61,6 @@
     resize: none;
     padding: 1rem;
     text-align: left;
+    overflow: auto;
   }
 }
